--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - ./backend/.env
     volumes:
       - ./backend:/app
   
